<resources>
    <string name="app_name">DonDeSang</string>
    <string name="connexion">Se connecter</string>
    <string name="inscription">Inscrivez vous! </string>
    <string name="mdp">Mot de passe</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="quote1">You can be someone\'s "\n" SUPERHERO!</string>
    <string name="pas_de_compte">Vous n\'avez pas encore de compte? </string>
    <string name="appli_name">BlooDonation</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié?</string>
    <string name="signup">Inscription</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="datenaiss">Date de naissance</string>
    <string name="adresse">Adresse</string>
    <string name="taille">Taille (cm)</string>
    <string name="poids">Poids (kg)</string>
    <string name="sexe">Sexe:</string>
    <string name="femme">Femme</string>
    <string name="homme">Homme</string>
    <string name="Suivant">Suivant</string>
    <string name="groupesanguin">Groupe sanguin</string>
    <string name="email">Email</string>
    <string name="phone">Numéro de téléphone</string>
    <string name="mdpconfirm">Confirmer le mot de passe</string>
    <string name="confirmer">Confirmer</string>
    <string-array name="groupeS">
        <item></item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="INSCRIPTION">INSCRIPTION</string>
    <string name="deconnexion">Deconnexion</string>

    <string name="traitement_des_nouvelles_inscriptions">Demandes de validation des comptes</string>
    <string name="aucunedemande">Aucune demande pour le moment</string>
    <string name="demandesignalement">Demandes de traitement des signalements</string>
    <string name="aucunsignalement">Aucun signalement pour le moment.</string>
    <string name="modifier_le_profil">Modifier le profil</string>
    <string name="afficher_les_annonces">Annonces</string>
    <string name="afficher_les_centres_de_dons">Centres de dons</string>
    <string name="afficher_mes_annonces">Mes annonces</string>
    <string name="messagerie">Messagerie</string>
    <string name="poster_annonces">Poster une annonce</string>
    <string name="quel_est_le_motif">Quel est le motif?</string>
    <string name="usurpation_d_identit">Usurpation d\'identité</string>
    <string name="faux_compte">Faux compte</string>
    <string name="voulez_vous_vraiment_supprimer_l_annonce">Voulez-vous vraiment supprimer l\'annonce ?</string>
    <string name="cette_op_ration_est_irr_versible">Cette opération est irréversible.</string>
    <string name="confirmer_suppression">Confirmer suppression</string>
    <string name="annuler">Annuler</string>

</resources>
