<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hand"
    android:orientation="vertical"
    tools:context=".Inscription">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/rouge"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/INSCRIPTION"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/nom"
                    android:layout_width="200dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_weight="1"
                    android:background="@color/grisclair"
                    android:ems="10"
                    android:hint="@string/nom"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/prenom"
                    android:layout_width="200dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@color/grisclair"
                    android:ems="10"
                    android:hint="@string/prenom"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    tools:targetApi="o" />
            </LinearLayout>


            <EditText
                android:id="@+id/datenaiss"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/grisclair"
                android:ems="10"
                android:hint="@string/datenaiss"
                android:importantForAutofill="no"
                android:inputType="date"
                tools:targetApi="o" />


            <EditText
                android:id="@+id/adresse"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/grisclair"
                android:ems="10"
                android:hint="@string/adresse"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:targetApi="o" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/taille"
                    android:layout_width="200dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@color/grisclair"
                    android:ems="10"
                    android:hint="@string/taille"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/poids"
                    android:layout_width="200dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@color/grisclair"
                    android:ems="10"
                    android:hint="@string/poids"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    tools:targetApi="o" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/groupesanguin"
                    android:layout_width="340dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/grisclair"
                    android:ems="10"
                    android:hint="@string/groupesanguin"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    tools:targetApi="o" />

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/sexeG"
                    android:layout_width="0dp"

                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/sexe"
                        android:layout_width="wrap_content"
                        android:layout_height="80dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginRight="2dp"
                        android:background="@color/grisclair"
                        android:gravity="center"
                        android:hint="@string/sexe"
                        android:textAlignment="center"
                        android:textSize="19sp" />

                    <RadioButton
                        android:id="@+id/rd_homme"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="RadioButtonSexe"
                        android:text="@string/homme" />

                    <RadioButton
                        android:id="@+id/rd_femme"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:onClick="RadioButtonSexe"
                        android:text="@string/femme" />

                </RadioGroup>



            </LinearLayout>
            <EditText
                android:id="@+id/nomutilisateur"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:background="@color/grisclair"
                android:ems="10"
                android:hint="@string/username"
                android:importantForAutofill="no"
                android:inputType="textPersonName"

                tools:targetApi="o" />


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:background="@color/grisclair"
                android:ems="10"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/ntel"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:background="@color/grisclair"
                android:ems="10"
                android:hint="@string/phone"
                android:importantForAutofill="no"
                android:inputType="phone"
                tools:targetApi="o" />


            <EditText
                android:id="@+id/mdp"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:background="@color/grisclair"
                android:ems="10"
                android:hint="@string/mdp"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                tools:targetApi="o" />


            <EditText
                android:id="@+id/cmdp"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:background="@color/grisclair"
                android:ems="10"
                android:hint="@string/mdpconfirm"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                tools:targetApi="o" />


            <Button
                android:id="@+id/btn_confirmer"
                android:layout_width="171dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="120dp"
                android:layout_marginRight="120dp"
                android:background="@drawable/shapesuivant"
                android:text="@string/confirmer"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>