<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/hero">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/appli_name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/red"
                android:textSize="35sp"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="710dp"
            android:layout_weight="1"
            android:orientation="vertical">


            <EditText
                android:id="@+id/pseudo"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:autofillHints=""
                android:background="@color/grisclair"
                android:drawableStart="@drawable/ic_action_username"
                android:drawableLeft="@drawable/ic_action_username"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                tools:targetApi="o" />


            <EditText
                android:id="@+id/mdp"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:autofillHints=""
                android:background="@color/grisclair"
                android:drawableStart="@drawable/ic_action_pass"
                android:drawableLeft="@drawable/ic_action_pass"
                android:ems="10"
                android:hint="@string/mdp"
                android:inputType="textPassword"
                tools:targetApi="o" />


            <Button
                android:id="@+id/btn_pswd"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="165dp"
                android:layout_marginLeft="165dp"
                android:background="@android:color/transparent"
                android:text="@string/mot_de_passe_oubli"
                android:textColor="@color/grisclair" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/shapelogin"
                android:text="@string/connexion" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="490dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_gravity="end"
                        android:layout_marginTop="40dp"
                        android:text="@string/pas_de_compte"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/black"


                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <Button
                        android:id="@+id/btn_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="25dp"
                        android:background="@android:color/transparent"
                        android:text="@string/inscription"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textStyle="italic|bold" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_weight="1"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/quote1"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/black"

                android:textSize="35sp"
                android:textStyle="bold|italic" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>